--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,16 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' %>
   </head>
-
   <body>
-    <%= yield %>
+    <div class="jumbotron">
+      <h1>Welcome to Mario's</h1>
+    </div>
+    <div class="container">
+
+
+      <%= yield %>
+    </div>
   </body>
 </html>
