--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= form_tag("/products", method:"post", class:"form-group") do %>
+<%= form_tag("product_id/reviews", method:"post", class:"form-group") do %>
   <%= label_tag("Product Name:") %>
   <%= text_field_tag(:name) %>
   <br>
