completely restarted. foreign key still throwing stuff off

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,12 @@
     </div>
     <div class="container">
 
-
+      <%= flash[:alert] %>
+      <%= flash[:notice] %>
+      
       <%= yield %>
+
+
     </div>
   </body>
 </html>
