--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,17 @@
-<%= link_to 'Add Product', new_product_path %>
+
+
+
+<h1>Products</h1>
 
 <% if @products.any? %>
-  <h2>All products:</h2>
   <ul>
-    <% @products.each do |p| %>
-      <li><%= link_to p.name, product_path(p) %></li>
+    <% @products.each do |product| %>
+    <li><%= link_to product.name, product_path(product) %></li>
     <% end %>
   </ul>
+<% else %>
+  <p>There are no products yet.</p>
 <% end %>
+
+
+<p><%= link_to "Create new product", new_product_path %></p>
