--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,16 +1,24 @@
 
 
 
-<h1><%= @project.name %></h1>
-<h3><%= @project.description %></h3>
+<h1><%= @product.name %></h1>
+<br>
+<h3><%= @product.description %></h3>
+<br>
+<h5> $<%= @product.cost %></h5>
+<br>
+<h5><%= @product.country_of_origin%></h5>
+<br>
+<br>
 
-<% if @project.reviews.any? %>
-  <h4>Here are the reviews for this project:</h4>
 
-  <% @project.reviews.each do |review| %>
+<% if @product.reviews.any? %>
+  <h4>Here are the reviews for this product:</h4>
+
+  <% @product.reviews.each do |review| %>
     <ul>
       <li>
-        <%= link_to review.name, product_review_path(@product, review) %>
+        <%= link_to review.author, product_review_path(@product, review) %>
       </li>
     </ul>
   <% end %>
@@ -18,7 +26,11 @@
   <p>No reviews are listed for this product.</p>
 <% end %>
 
-<p><%= link_to "Add a review", new_product_review_path(@project) %></p>
+<br>
+<br>
+
+
+<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 
 <p><%= link_to "Edit", edit_product_path(@product) %></p>
 <p><%= link_to "Delete product", product_path(@product),
