--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,9 +1,19 @@
-<h1>Add a new review:</h1>
+<h3>Add a new review:</h3>
+<br>
+<br>
 
-<%= form_for [@product, @review] do |f| %>
-  <%= f.label :author %>
-  <%= f.text_field :author %>
-  <%= f.label :content_body %>
-  <%= f.text_area :content_body %>
-  <p><%= f.submit %></p>
+<%= form_for [@product, @review] do |g| %>
+  <%= g.label :author %>
+  <%= g.text_field :author %>
+  <br>
+  <br>
+  <%= g.label :content_body %>
+  <%= g.text_area :content_body %>
+  <br>
+  <br>
+  <p>please enter a number rating 1-5</p>
+  <%= g.label :rating %>
+  <%= g.text_field :rating %>
+
+  <p><%= g.submit %></p>
 <% end %>
