still working on reviews seeding, backed up db

--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <h3>Please fix these errors:</h3>
+  <h3>🤮 Please fix these errors:</h3>
   <ul>
     <% object.errors.full_messages.each do |message| %>
       <li><%= message %></li>
