--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,28 @@
         background-size: cover;
         background-position: center;
         color: white;
-        text-shadow: 2px 2px 8px;
-
+        text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px darkred;
       }
+      .picture {
+        float: right;
+        transform: rotateY(180deg);
+      }
+      .opener {
+        border-style: solid;
+        border-width: 2px;
+        border-color: red;
+        padding: 7px;
+        background-color: crimson;
+        color: white;
+      }
+      body {
+        background-color:indianred ;
+      }
+      .container {
+        background-color: white;
+        padding: 10px;
+      }
+
 
 
 
@@ -25,7 +44,8 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Welcome to Mario's</h1>
+      <h1>Welcome to Mario's 🍄</h1>
+      <h4> (more than just pipes) </h4>
     </div>
     <div class="container">
 
