--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,16 @@
 
+<div class="opener">
+  <p> At Mario's, we pride ourselves on carrying a wide variety of industry products. It is our company's mission to provide and dispense exceptional lab tested cannabis products at competitive pricing. Our knowledgeable and friendly staff is ready to greet and assist recreational customers in making informed decisions about their purchases. Must be +21 to party.
+
+</div>
+<br>
+<br>
+<div class="picture">
+
+<img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/4ddabef1-8390-424a-a828-f61e4df3d499/daraj8q-aa71d933-f07d-4901-b0dc-a8982be740ad.gif" alt="">
+</div>
+
+<div class="container">
 
 
 <h1>Products</h1>
@@ -10,8 +22,9 @@
     <% end %>
   </ul>
 <% else %>
-  <p>There are no products yet.</p>
+  <p>There are no products yet. Hop in the pipe and roll one up.</p>
 <% end %>
 
 
-<p><%= link_to "Create new product", new_product_path %></p>
+<p><%= link_to "Roll one up", new_product_path %></p>
+</div>
