--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="opener">
-  <p> At Mario's, we pride ourselves on carrying a wide variety of industry products. It is our company's mission to provide and dispense exceptional lab tested cannabis products at competitive pricing. Our knowledgeable and friendly staff is ready to greet and assist recreational customers in making informed decisions about their purchases. Must be +21 to party.
+  <p> At Mario's, we pride ourselves on carrying a wide variety of industry products. It is our company's mission to provide and dispense exceptional lab tested cannabis products at competitive pricing. Our knowledgeable and friendly staff is ready to greet and assist recreational customers in making informed decisions about their purchases. Must be +21 to party 🌟.
 
 </div>
 <br>
