--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
       .picture {
         float: right;
         transform: rotateY(180deg);
+
       }
       .opener {
         border-style: solid;
@@ -36,6 +37,19 @@
         background-color: white;
         padding: 10px;
       }
+
+      .star {
+        float: right;
+        width: 33.33%;
+        padding: 30px;
+      }
+
+      .toad {
+        float: right;
+        width: 33.33%;
+        padding: 30px;
+      }
+
 
 
 
