--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,8 @@
 
 
+<div class="star">
+  <img src="https://gifimage.net/wp-content/uploads/2017/10/mario-star-gif-9.gif" alt="">
+</div>
 
 <h1> 🔥 <%= @product.name %></h1>
 <br>
