--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,3 +1,8 @@
+<div class="toad">
+<img src="https://i.gifer.com/origin/d4/d459d3d5a51f7c5224f71daa9f54318a_w200.gif" alt="">
+</div>
+
+
 <h3>Reviewer: <%= @review.author %></h3>
 <br>
 <h4>Product: <%= @product.name %></h4>
