--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -47,7 +47,7 @@
     <%end%>
   </ul>
   <%else%>
-  <p>No current products made in USA.</p>
+  <p>No current products made in USA. This ain't China</p>
   <%end%>
 </div>
 
